# minibot

src/: CMakeLists.txt
src/launch/: pacman.launch.py
src/scripts/: game_monitor.py  generate_maze.py  ghost_node.py  maze_generator.py  nrf24_bridge.py  pacman_node.py  ros_visualizer.py  score_visualizer.py  spawn_arena.py
src/urdf/: minibot_game.xacro
src/worlds/: pacman_empty.world
